# change project to nodejes

--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Happy New Year!  -- CSS Only </title>
+  <title>Happy New Year! </title>
   
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="static/css/reset.min.css">
+	<link rel="stylesheet" href="static/css/normalize.min.css">
   
-      <link rel="stylesheet" href="css/style.css">
-
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+      <link rel="stylesheet" href="static/css/style.css">
 
 
 </head>
@@ -20,13 +18,13 @@
   <body>
 	  
   <div id="particles-js"></div>
-  <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
+  <script src='static/js/particles.min.js'></script>
 
   
 
-    <script  src="main.js"></script>
+    <script  src="static/js/main.js"></script>
 
-		<script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
+		<script src='static/js/particles.min.js'></script>
 <div id="new-year"><svg id="new-year-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 200"  >
 	<defs>
 		<path id="happy-path" d="M190.479,20.124h6.193v7.014h6.768v-7.014h6.221v20.043h-6.221V32.06h-6.768v8.107h-6.193V20.124zM231.698,36.858h-7.031l-0.977,3.309h-6.324l7.533-20.043h6.756l7.531,20.043h-6.485L231.698,36.858zM230.413,32.524l-2.212-7.205l-2.189,7.205H230.413zM246.728,20.124h10.295c2.242,0,3.921,0.533,5.038,1.6c1.116,1.066,1.675,2.584,1.675,4.553c0,2.023-0.608,3.605-1.825,4.744c-1.217,1.14-3.074,1.709-5.571,1.709h-3.391v7.438h-6.221V20.124zM252.948,28.669h1.518c1.194,0,2.032-0.207,2.516-0.622c0.483-0.415,0.725-0.945,0.725-1.593c0-0.629-0.21-1.162-0.629-1.6c-0.419-0.438-1.208-0.656-2.365-0.656h-1.764V28.669zM272.548,20.124h10.295c2.242,0,3.921,0.533,5.038,1.6c1.116,1.066,1.675,2.584,1.675,4.553c0,2.023-0.608,3.605-1.825,4.744c-1.217,1.14-3.074,1.709-5.571,1.709h-3.391v7.438h-6.221V20.124zM278.769,28.669h1.518c1.194,0,2.032-0.207,2.516-0.622c0.483-0.415,0.725-0.945,0.725-1.593c0-0.629-0.21-1.162-0.629-1.6c-0.419-0.438-1.208-0.656-2.365-0.656h-1.764V28.669zM296.373,20.124h6.879l4.038,6.762l4.046-6.762h6.843l-7.793,11.648v8.395h-6.207v-8.395L296.373,20.124z"/>
@@ -108,7 +106,7 @@
     <path id="ear-stroke" class="stroke-fill" clip-path="url(#ear-clip)"  fill="none" stroke="#4F2525" stroke-width="9" stroke-linejoin="round" stroke-miterlimit="10" d="M333.5,87.125c-11.25,4.625-13.25,26.375-10.188,34.812c2.441,6.726,5.553,7.938,8.625,7.938c4.188,0,7.059-6.344,8.188-9c4.438-10.438,4.572-15.379,7.875-24c6.25-16.312,12.625-9.312,12.625-9.312s-8.263,9.086-9.688,16.25c-2.125,10.688-5.125,26.438,2.062,22.125c3.727-2.236,4.544-11.855,7.312-19.625c3.805-10.68,8.938-19.875,8.938-19.875s-4.625,30.812-1.438,37.562s6.846,5.672,8.438,4.5c9.25-6.812,8.562-39.625,3.438-44.062s13.178,10.246,18,5.812c3.875-3.562-0.931,5.241-1.438,11.875c-0.785,10.278-2.375,23.625,2.562,26.312c2.147,1.169,10.688-8.938,12.438-9.604c2.574-0.98,8.726,13.833,10.917,13.833c0.833,0,0.25-7.25,0.25-7.25s11.25-4.167,11.25-4.167l3.75-60.167L424,63.156l0.25,6.094l-0.156,2.594L424,74.25l-2,44"/>
 </div>
 </div>
-
+<div style="position:absolute; color: yellow; right: 20px; bottom: 20px; font-size: 36pt;">涂飞平敬</div>
 </body>
   
   
